# skillreg

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dashboard/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
dashboard/src/: App.vue  main.js
dashboard/src/api/: index.js  ssh.js
dashboard/src/components/: CommandPanel.vue  ComponentPlayground.vue  DependencyGraph.vue  FilePreview.vue  FileTree.vue  GitLog.vue  HookItem.vue  HooksView.vue  NavItem.vue  ProjectManager.vue  QButton.vue  QCard.vue  QCheckbox.vue  QCheckboxGroup.vue  QDiffViewer.vue  QInput.vue  QLayout.vue  QModal.vue  QRadio.vue  QRadioGroup.vue  QTabs.vue  QThemeSwitch.vue  QToast.vue  SkillCard.vue  SkillContextPanel.vue  SkillDetailDrawer.vue  SkillDetailModal.vue  SkillGrid.vue  SkillImportModal.vue  SkillSyncBadge.vue  SkillSyncManager.vue  SkillSyncStatus.vue  SourceManager.vue  SshModeBanner.vue  StatusBadge.vue  SubmoduleBadge.vue  SubmoduleStatus.vue  ThemeSwitch.vue  WorkspaceOnboarding.vue
dashboard/src/components/ssh/: RemoteSyncView.vue  SshHostCard.vue  SshHostFormModal.vue  SshSyncPanel.vue
dashboard/src/composables/: useCommands.js  useContextPanel.js  useData.js  useEventBus.js  useLayerStack.js  useRemoteData.js  useServerHealth.js  useSkillDetail.js  useSshHosts.js  useSshMode.js  useSyncBridge.js  useToast.js
dashboard/src/router/: index.js
dashboard/src/search/: searchCommands.js
dashboard/src/sources/: sourceState.js
dashboard/src/styles/: global.css  variables.css
dashboard/src/views/: SshView.vue
dashboard/tests/e2e/: dashboard.spec.js
dashboard/tests/fixtures/folder-picker-skill/: SKILL.md
dashboard/tests/fixtures/folder-picker-skill/scripts/: run.py
dashboard/tests/unit/: searchCommands.test.js  sourceState.test.js
docs/: README.en.md  npm-publishing.md  project-layout.md  release-process.md  release-readiness.md  skillreg-register-dirty-workspace-handoff.md
docs/archive/: dashboard-migration-matrix.md
docs/archive/issues/: 01-freeze-api-contract.md  02-repo-skeleton-cli-backend.md  03-sync-registry-skills-migration.md  05-files-git-submodules-hooks-migration.md  06-dashboard-build-v1-loop.md  07-open-source-release-archive.md
issues/: 04-workspace-selfskill-import.md
npm/: README.md  package-lock.json  package.json
npm/lib/: launcher.js
npm/test/: launcher.test.js
scripts/: check_version.py  install-git-hooks.sh  release.sh  versioning.py
scripts/hooks/: commit-msg
self-skill/: README.md
skillreg-cli/: README.md
specs/: api-contract.md  openapi.yaml  skillreg-v2.md
specs/_contract_parts/: files.md  hooks.md  import-git-submodules.md  registry-skills.md  sync.md
src/skillreg/: __init__.py  cli.py  config.py  server.py
src/skillreg/builtin/skillreg/: SKILL.md
src/skillreg/builtin/skillreg-skill/: SKILL.md
src/skillreg/builtin/skillreg-skill/references/: getting-started.md  install.md  troubleshooting.md
src/skillreg/server/: __init__.py  compat.py  files.py  git.py  health.py  hooks.py  import_.py  registry.py  skills.py  sources.py  submodules.py  sync.py  workspace.py
src/skillreg/services/: __init__.py  directory_picker.py  file_browser.py  git_ops.py  importer.py  npm_source.py  self_skill.py  skill_registry.py  source_manager.py  source_store.py  sync_manager.py  url_utils.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_cli_commands.py  test_compat_routes.py  test_config.py  test_dashboard_migration_e2e.py  test_directory_picker.py  test_files_git.py  test_health.py  test_importer.py  test_npm_source.py  test_self_skill.py  test_skill_registry.py  test_source_manager.py  test_source_store.py  test_sources_api_cli.py  test_url_utils.py  test_versioning.py
tests/e2e/: serve_dashboard.py
ui-framework/: README.md
