[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillreg"
version = "0.1.0"
description = "skillreg — skill registry control plane (CLI + FastAPI backend)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kexjhhuang", email = "fcraft@qq.com" }]
keywords = ["skill", "registry", "claude", "agent", "fastapi"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
skillreg = "skillreg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillreg"]

[tool.hatch.build.targets.sdist]
include = ["src/skillreg", "dashboard", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
