[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillreg"
version = "1.2.3"
description = "skillreg — skill registry control plane (CLI + FastAPI backend)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "HJH201314", email = "fcraft@qq.com" }]
keywords = ["skill", "registry", "claude", "agent", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "click>=8.1",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
    "python-multipart>=0.0.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "playwright>=1.54.0",
]

[project.urls]
Homepage = "https://github.com/fcraft/skillreg"
Repository = "https://github.com/fcraft/skillreg"
Issues = "https://github.com/fcraft/skillreg/issues"
Releases = "https://github.com/fcraft/skillreg/releases"

[project.scripts]
skillreg = "skillreg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillreg"]

[tool.hatch.build.targets.sdist]
include = ["src/skillreg", "dashboard", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
